Collapse away nested anonymous blocks

https://crrev.com/6c773d61ff0fd819a7eb8be93d947004e99e28b1 [formerly 59d3539fc7ce60355ccf52c00733d33dde5e118a] stopped collapsing:

       LayoutBlockFlow (anonymous) at (0,0)
          LayoutBlockFlow (anonymous) at (0,0)
            LayoutInline {SPAN} at (0,0)

to

       LayoutBlockFlow (anonymous) at (0,0)
         LayoutInline {SPAN} at (0,0)

Reinstate that behaviour!

BUG=627149

Review-Url: https://codereview.chromium.org/2176043002
Cr-Commit-Position: refs/heads/master@{#407551}

Former-commit-id: 67818d55a1b15b97a96b7a74814e822024b0a346